--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <link rel="preload" as="image" href="bg-thumb.webp">
   <style>
     :root{
-      --glass-bg: rgba(2,5,15,0.78);
-      --glass-border: rgba(255,255,255,0.32);
-      --glass-accent: rgba(120,255,178,0.25);
-      --text: #f3f3f3;
-      --muted: #c8c8c8;
-      --accent: #78ffb2;
-      --accent2: #ff5fd2;
-      --link: #9ee8ff;
-      --burn: #ffb347;
+      /* Palette più professionale, fredda */
+      --glass-bg: rgba(5, 10, 26, 0.78);
+      --glass-border: rgba(255,255,255,0.28);
+      --glass-accent: rgba(90, 180, 255, 0.22);
+      --text: #f5f7ff;
+      --muted: #a5b0d0;
+      --accent: #5dd6ff;   /* azzurro */
+      --accent2: #9b8cff;  /* viola */
+      --link: #7fd0ff;
+      --burn: #ff9e5a;     /* rimane caldo per il fuoco */
     }
     *{ box-sizing: border-box; }
     html, body {
@@ -51,7 +52,7 @@
 
     // Layout
     let CONTAINER_TOP_Y_PCT = 0.18;
-    let BOTTOM_INFO_Y       = 0.94;
+    let BOTTOM_INFO_Y       = 0.94; // ora non usato, ma lo lasciamo se vuoi riaggiungere badge in futuro
 
     let BG_FOCUS_X = 0.5, BG_FOCUS_Y = 0.32;
 
@@ -62,15 +63,15 @@
       : null;
 
     const COLOR = {
-      text:   getComputedStyle(document.documentElement).getPropertyValue('--text').trim()        || '#f3f3f3',
-      muted:  getComputedStyle(document.documentElement).getPropertyValue('--muted').trim()      || '#c8c8c8',
-      glass:  getComputedStyle(document.documentElement).getPropertyValue('--glass-bg').trim()   || 'rgba(2,5,15,0.78)',
-      stroke: getComputedStyle(document.documentElement).getPropertyValue('--glass-border').trim() || 'rgba(255,255,255,0.32)',
-      stroke2:getComputedStyle(document.documentElement).getPropertyValue('--glass-accent').trim() || 'rgba(120,255,178,0.25)',
-      accent: getComputedStyle(document.documentElement).getPropertyValue('--accent').trim()     || '#78ffb2',
-      accent2:getComputedStyle(document.documentElement).getPropertyValue('--accent2').trim()    || '#ff5fd2',
-      link:   getComputedStyle(document.documentElement).getPropertyValue('--link').trim()       || '#9ee8ff',
-      burn:   getComputedStyle(document.documentElement).getPropertyValue('--burn').trim()       || '#ffb347'
+      text:   getComputedStyle(document.documentElement).getPropertyValue('--text').trim()        || '#f5f7ff',
+      muted:  getComputedStyle(document.documentElement).getPropertyValue('--muted').trim()      || '#a5b0d0',
+      glass:  getComputedStyle(document.documentElement).getPropertyValue('--glass-bg').trim()   || 'rgba(5,10,26,0.78)',
+      stroke: getComputedStyle(document.documentElement).getPropertyValue('--glass-border').trim() || 'rgba(255,255,255,0.28)',
+      stroke2:getComputedStyle(document.documentElement).getPropertyValue('--glass-accent').trim() || 'rgba(90,180,255,0.22)',
+      accent: getComputedStyle(document.documentElement).getPropertyValue('--accent').trim()     || '#5dd6ff',
+      accent2:getComputedStyle(document.documentElement).getPropertyValue('--accent2').trim()    || '#9b8cff',
+      link:   getComputedStyle(document.documentElement).getPropertyValue('--link').trim()       || '#7fd0ff',
+      burn:   getComputedStyle(document.documentElement).getPropertyValue('--burn').trim()       || '#ff9e5a'
     };
 
     const canvas = document.getElementById('stage');
@@ -165,37 +166,23 @@
     }
 
     function drawPanel(x, y, w, h){
+      // Pannello più trasparente per far vedere il fuoco dietro
       roundRectPath(x, y, w, h, px(18));
-      ctx.fillStyle = 'rgba(4,8,24,0.92)';
+      ctx.fillStyle = COLOR.glass;
       ctx.fill();
-      ctx.lineWidth = 2;
-      ctx.strokeStyle = 'rgba(255,255,255,0.35)';
-      ctx.stroke();
-      ctx.lineWidth = 2;
-      ctx.strokeStyle = 'rgba(120,255,178,0.25)';
+      ctx.lineWidth = 1.6;
+      ctx.strokeStyle = COLOR.stroke;
       ctx.stroke();
       ctx.lineWidth = 1;
-      ctx.strokeStyle = 'rgba(255,95,210,0.25)';
+      ctx.strokeStyle = COLOR.stroke2;
       ctx.stroke();
 
+      // highlight morbido in alto
       const g = ctx.createLinearGradient(x, y, x, y+px(60));
-      g.addColorStop(0, 'rgba(255,255,255,0.12)');
+      g.addColorStop(0, 'rgba(255,255,255,0.09)');
       g.addColorStop(1, 'rgba(255,255,255,0.00)');
       ctx.fillStyle = g;
       ctx.fillRect(x+px(2), y+px(2), w-px(4), px(58));
-    }
-
-    // Tabella più trasparente
-    function drawSoftPanel(x, y, w, h){
-      roundRectPath(x, y, w, h, px(16));
-      ctx.fillStyle = 'rgba(5,10,26,0.55)';          // più trasparente
-      ctx.fill();
-      ctx.lineWidth = 1.5;
-      ctx.strokeStyle = 'rgba(255,255,255,0.28)';
-      ctx.stroke();
-      ctx.lineWidth = 1;
-      ctx.strokeStyle = 'rgba(120,255,178,0.18)';
-      ctx.stroke();
     }
 
     function text(opts){
@@ -306,9 +293,10 @@
         ctx.fillRect(0,0,w,h);
       }
 
+      // Vignettatura un po' più leggera per far vedere meglio il fondo
       const v = ctx.createRadialGradient(w*0.5,h*0.3,0,w*0.5,h*0.5,Math.max(w,h)*0.8);
-      v.addColorStop(0,'rgba(0,0,0,0.20)');
-      v.addColorStop(1,'rgba(0,0,0,0.70)');
+      v.addColorStop(0,'rgba(0,0,0,0.15)');
+      v.addColorStop(1,'rgba(0,0,0,0.60)');
       ctx.fillStyle = v;
       ctx.fillRect(0,0,w,h);
     }
@@ -360,9 +348,11 @@
 
       const tableRowsH = headH + Math.max(1, rows.length) * rowH + tPad*2 + px(6);
 
-      const statsBlockH = px(100);
+      const cardH      = px(72);
+      const cardGapY   = px(10);
+      const cardsBlockH = cardH * 2 + cardGapY; // tre card sopra + una card (wallet) sotto
 
-      const panelH = tPad + statsBlockH + tPad + tableRowsH + tPad;
+      const panelH = tPad + cardsBlockH + tPad + tableRowsH + tPad;
 
       const panelX = Math.floor((w - panelW)/2);
       let panelY   = Math.floor(h * CONTAINER_TOP_Y_PCT);
@@ -405,12 +395,12 @@
         const by=Math.floor(panelY + px(14));
         roundRectPath(bx,by,bw,bh,px(999));
         const g = ctx.createLinearGradient(bx,by,bx,by+bh);
-        g.addColorStop(0,'rgba(255,255,255,0.20)');
+        g.addColorStop(0,'rgba(255,255,255,0.16)');
         g.addColorStop(1,'rgba(255,255,255,0.05)');
         ctx.fillStyle = g;
         ctx.fill();
         ctx.lineWidth = 1;
-        ctx.strokeStyle = 'rgba(255,255,255,0.45)';
+        ctx.strokeStyle = 'rgba(255,255,255,0.40)';
         ctx.stroke();
 
         text({
@@ -430,17 +420,17 @@
       const statsTopY = headerY + px(48);
       const colGap    = px(10);
       const colW      = (panelW - px(18)*2 - colGap*2) / 3;
-      const cardH     = px(72);
 
+      // Card 1: TotalBarnet
       const card1X = panelX + px(18);
       const card1Y = statsTopY;
       drawStatCard(
         card1X, card1Y, colW, cardH,
-        ['rgba(40,255,180,0.18)','rgba(0,0,0,0.4)'],
-        'rgba(120,255,178,0.85)'
+        ['rgba(93,214,255,0.18)','rgba(3,10,30,0.7)'],
+        'rgba(93,214,255,0.85)'
       );
       text({
-        str: 'Total burned',
+        str: 'Total Barnet',
         x: card1X + padX,
         y: card1Y + padY,
         size: labelSize,
@@ -458,15 +448,16 @@
         baseline: 'top'
       });
 
+      // Card 2: TotalUSDBarnet
       const card2X = card1X + colW + colGap;
       const card2Y = statsTopY;
       drawStatCard(
         card2X, card2Y, colW, cardH,
-        ['rgba(255,95,210,0.18)','rgba(0,0,0,0.4)'],
-        'rgba(255,95,210,0.85)'
+        ['rgba(155,140,255,0.20)','rgba(3,8,28,0.7)'],
+        'rgba(155,140,255,0.85)'
       );
       text({
-        str: 'Total USD burned',
+        str: 'Total USD Barnet',
         x: card2X + padX,
         y: card2Y + padY,
         size: labelSize,
@@ -484,15 +475,16 @@
         baseline: 'top'
       });
 
+      // Card 3: TotalSupply
       const card3X = card2X + colW + colGap;
       const card3Y = statsTopY;
       drawStatCard(
         card3X, card3Y, colW, cardH,
-        ['rgba(255,179,71,0.18)','rgba(0,0,0,0.45)'],
-        'rgba(255,179,71,0.9)'
+        ['rgba(80,95,140,0.30)','rgba(3,6,20,0.7)'],
+        'rgba(200,210,255,0.80)'
       );
       text({
-        str: 'Total supply',
+        str: 'Total Supply',
         x: card3X + padX,
         y: card3Y + padY,
         size: labelSize,
@@ -510,47 +502,108 @@
         baseline: 'top'
       });
 
-      // burn address pill
-      const burnStr = shorten(BURN_ADDRESS);
-      ctx.font = `700 ${px(11)}px system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif`;
-      const bw = ctx.measureText(burnStr).width + px(26);
-      const bh = px(22);
-      const bx = card3X + colW - bw - px(6);
-      const by = card3Y + cardH - bh - px(4);
-      roundRectPath(bx,by,bw,bh,px(999));
-      ctx.fillStyle = 'rgba(0,0,0,0.65)';
-      ctx.fill();
-      ctx.lineWidth = 1;
-      ctx.strokeStyle = 'rgba(255,255,255,0.45)';
-      ctx.stroke();
+      // Card 4: Wallet + NumMousePrice + LastUpdate
+      const card4X = panelX + px(18);
+      const card4Y = statsTopY + cardH + cardGapY;
+      const card4W = panelW - px(18)*2;
+      drawStatCard(
+        card4X, card4Y, card4W, cardH,
+        ['rgba(10,20,45,0.85)','rgba(5,10,30,0.75)'],
+        'rgba(125,190,255,0.85)'
+      );
+
+      const updated     = price?.updatedAt || burn?.updatedAt || null;
+      const updatedStr  = updated ? new Date(updated).toLocaleString() : '—';
+      const priceStr    = pxUsd
+        ? pxUsd.toLocaleString(undefined, { maximumFractionDigits: 6 })
+        : '—';
+
       text({
-        str: burnStr,
-        x: bx + bw/2,
-        y: by + bh/2 + 1,
-        size: px(11),
-        weight: 700,
-        color: COLOR.link,
-        align: 'center',
-        baseline: 'middle'
+        str: 'Wallet',
+        x: card4X + padX,
+        y: card4Y + padY,
+        size: labelSize,
+        weight: labelWeight,
+        color: COLOR.muted,
+        baseline: 'top'
       });
+
+      // Indirizzo del wallet
+      const walletY = card4Y + padY + labelSize + vGap;
+      text({
+        str: shorten(BURN_ADDRESS),
+        x: card4X + padX,
+        y: walletY,
+        size: valueSize,
+        weight: valueWeight,
+        color: COLOR.link,
+        baseline: 'top'
+      });
+
+      // NumMousePrice
+      const infoY = walletY + valueSize + px(4);
+      text({
+        str: `NumMouse price: ${priceStr} USD`,
+        x: card4X + padX,
+        y: infoY,
+        size: px(12),
+        weight: 500,
+        color: COLOR.muted,
+        baseline: 'top'
+      });
+
+      // Last update
+      text({
+        str: `Last update: ${updatedStr}`,
+        x: card4X + padX,
+        y: infoY + px(16),
+        size: px(11),
+        weight: 400,
+        color: COLOR.muted,
+        baseline: 'top'
+      });
+
+      // Link Solscan dentro la card Wallet (solo il testo è cliccabile, non tutta la card)
       if (BURN_SOLSCAN_URL){
-        linkHitboxes.push({ x: bx, y: by, w: bw, h: bh, url: BURN_SOLSCAN_URL });
+        const linkStr = 'Open on Solscan';
+        ctx.font = `700 ${px(11)}px system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif`;
+        ctx.fillStyle = COLOR.link;
+        ctx.textAlign = 'right';
+        ctx.textBaseline = 'alphabetic';
+        const lx = card4X + card4W - padX;
+        const ly = card4Y + cardH - padY;
+        ctx.fillText(linkStr, lx, ly);
+        const m = ctx.measureText(linkStr);
+        linkHitboxes.push({
+          x: lx - m.width,
+          y: ly - px(14),
+          w: m.width,
+          h: px(18),
+          url: BURN_SOLSCAN_URL
+        });
       }
 
-      // TABELLONE più trasparente
+      // TABELLONE TRANSAZIONI — una sola tabella, integrata, più trasparente
       const tableX       = panelX + px(18);
-      const tableY       = statsTopY + cardH + px(18);
+      const tableY       = statsTopY + cardsBlockH + px(18);
       const tableInnerW  = panelW - px(18)*2;
       const tableH       = tableRowsH;
 
-      drawSoftPanel(tableX, tableY, tableInnerW, tableH);
-
+      // Leggera fascia di header sopra la tabella, senza secondo bordo
       const headerBarH = px(34);
       const hbGrad = ctx.createLinearGradient(tableX, tableY, tableX, tableY + headerBarH);
-      hbGrad.addColorStop(0, 'rgba(255,255,255,0.10)');
+      hbGrad.addColorStop(0, 'rgba(255,255,255,0.07)');
       hbGrad.addColorStop(1, 'rgba(255,255,255,0.00)');
       ctx.fillStyle = hbGrad;
-      ctx.fillRect(tableX+px(2), tableY+px(2), tableInnerW-px(4), headerBarH);
+      ctx.fillRect(tableX, tableY, tableInnerW, headerBarH);
+
+      // Divider sottile tra cards e tabella
+      ctx.strokeStyle = 'rgba(255,255,255,0.10)';
+      ctx.lineWidth = 1;
+      ctx.beginPath();
+      ctx.moveTo(tableX, tableY);
+      ctx.lineTo(tableX + tableInnerW, tableY);
+      ctx.stroke();
 
       text({
         str: 'Recent burns',
@@ -624,8 +677,9 @@
           const url = row.url || '#';
           const ts  = row.timestamp || '';
 
+          // Riga alternata con overlay molto leggero (più trasparente)
           if (i % 2 === 0){
-            ctx.fillStyle = 'rgba(255,255,255,0.04)';
+            ctx.fillStyle = 'rgba(0,0,0,0.25)';
             ctx.fillRect(tableX+px(8), ry - px(10), tableInnerW-px(16), rowH);
           }
 
@@ -673,54 +727,7 @@
         }
       }
 
-      // Badge in basso
-      const updated     = price?.updatedAt || burn?.updatedAt || null;
-      const updatedStr  = updated ? `Last updated: ${new Date(updated).toLocaleString()}` : 'Last updated: —';
-      const priceStr    = (pxUsd ? pxUsd.toLocaleString(undefined, { maximumFractionDigits: 6 }) : '—');
-      const priceLabel  = `Nummus price: ${priceStr} USD`;
-
-      ctx.font = `700 ${px(13)}px system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif`;
-      const upW    = Math.ceil(ctx.measureText(updatedStr).width) + px(24);
-      const prW    = Math.ceil(ctx.measureText(priceLabel).width) + px(24);
-      const badgeH = px(30);
-      const bottomY= Math.floor(h * BOTTOM_INFO_Y);
-
-      const upX = panelX;
-      const upY = bottomY - Math.floor(badgeH/2);
-      roundRectPath(upX, upY, upW, badgeH, px(999));
-      ctx.fillStyle = 'rgba(0,0,0,0.7)';
-      ctx.fill();
-      ctx.lineWidth = 1;
-      ctx.strokeStyle = 'rgba(255,255,255,0.4)';
-      ctx.stroke();
-      text({
-        str: updatedStr,
-        x: upX + px(12),
-        y: bottomY+1,
-        size: px(13),
-        weight: 700,
-        baseline: 'middle',
-        color: COLOR.muted
-      });
-
-      const prX = panelX + panelW - prW;
-      const prY = upY;
-      roundRectPath(prX, prY, prW, badgeH, px(999));
-      ctx.fillStyle = 'rgba(0,0,0,0.7)';
-      ctx.fill();
-      ctx.lineWidth = 1;
-      ctx.strokeStyle = 'rgba(255,255,255,0.4)';
-      ctx.stroke();
-      text({
-        str: priceLabel,
-        x: prX + prW - px(12),
-        y: bottomY+1,
-        size: px(13),
-        weight: 700,
-        align: 'right',
-        baseline: 'middle',
-        color: COLOR.text
-      });
+      // NIENTE badge in basso: più spazio libero per vedere bene il fuoco e i lapilli
     }
 
     // Interactivity
